fixing css and make text more readable

--- a/_sass/jekyll-theme-prologue.scss
+++ b/_sass/jekyll-theme-prologue.scss
@@ -65,7 +65,7 @@
 		font-size: 19pt;
 		font-weight: 300;
 		line-height: 1.75em;
-		color: #555;
+		color: #444;
 
 		&.is-loading * {
 			@include vendor('transition', 'none !important');
@@ -78,12 +78,12 @@
 		font-size: 19pt;
 		font-weight: 300;
 		line-height: 1.75em;
-		color: #555;
+		color: #444;
 	}
 
 	h1, h2, h3, h4, h5, h6 {
 		font-weight: 300;
-		color: #444;
+		color: #333;
 		line-height: 1.5em;
 	}
 
@@ -92,7 +92,7 @@
 		text-decoration: none;
 
 		strong {
-			color: #333;
+			color: #222;
 		}
 	}
 
@@ -119,7 +119,7 @@
 
 	strong, b {
 		font-weight: 300;
-		color: #555;
+		color: #444;
 	}
 
 	em, i {
